# HamsterDrivers

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  build.rs  package-lock.json  package.bat  package.json  package.ps1  test_monitor.rs
.cargo/: config.toml
.trae/skills/github-icon-downloader/: SKILL.md
public/styles/: style.css
src/: bootstrap_icons_v1_13_1.rs  bootstrap_icons_v1_13_1_optimized.rs  main.rs
src/Core/: driver_manager.rs  edid.rs  mod.rs  sysinfo.rs
src/Core/features/: backup_manager.rs  dependency_analyzer.rs  driver_installer.rs  driver_manager.rs  driver_searcher.rs  mod.rs  signature_validator.rs
src/Core/windows_api/: driver_file.rs  driver_service.rs  mod.rs
src/cache/: driver_cache.rs
src/features/: backup_manager.rs  dependency_analyzer.rs  mod.rs  signature_validator.rs
src/gui/: mod.rs
src/layouts/: MainLayout.astro
src/pages/: download.astro  features.astro  index.astro  support.astro
src/security/: elevation.rs
src/styles/: style.css
src/windows_api/: driver_file.rs  driver_service.rs  mod.rs
